tests/errors/e_notnone.pyx
cdef extern class Grail.Shrubbery

cdef void spam(Shrubbery sh not None):
	pass
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/e_notnone.pyx:3:15: 'not None' only allowed in Python functions
"""
